--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
        <version>3.0.0-SNAPSHOT</version>
        <classifier>sources</classifier>
      </dependency>
+      <dependency>
+        <groupId>org.mvel</groupId>
+        <artifactId>mvel2</artifactId>
+        <version>2.2.0.Final</version>
+        <scope>system</scope>
+        <!-- Add the dependency locally for now as this release is not yet in Maven Central -->
+        <systemPath>${basedir}/local-libs/mvel2-2.2.0.Final.jar</systemPath>
+      </dependency>
 
   </dependencies>
 
