--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,12 @@
      </dependency>
      <dependency>
        <groupId>io.vertx</groupId>
+       <artifactId>codegen</artifactId>
+       <version>1.0-SNAPSHOT</version>
+       <classifier>sources</classifier>
+     </dependency>
+     <dependency>
+       <groupId>io.vertx</groupId>
        <artifactId>vertx-core</artifactId>
        <version>3.0.0-SNAPSHOT</version>
      </dependency>
@@ -33,6 +39,12 @@
         <scope>system</scope>
         <!-- Add the dependency locally for now as this release is not yet in Maven Central -->
         <systemPath>${basedir}/local-libs/mvel2-2.2.0.Final.jar</systemPath>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+        <scope>test</scope>
       </dependency>
 
   </dependencies>
@@ -56,6 +68,16 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.17</version>
+                <configuration>
+                    <additionalClasspathElements>
+                        <additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
+                    </additionalClasspathElements>
+                </configuration>
             </plugin>
         </plugins>
     </build>
