--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,15 @@
   <artifactId>vertx-js</artifactId>
   <version>3.0.0-SNAPSHOT</version>
 
+
+    <!-- This is temporary, until the MVEL release hits Maven Central -->
+    <repositories>
+        <repository>
+            <id>Codehaus repository</id>
+            <url>http://repository.codehaus.org</url>
+        </repository>
+    </repositories>
+
   <dependencies>
 
     <dependency>
@@ -36,9 +45,9 @@
         <groupId>org.mvel</groupId>
         <artifactId>mvel2</artifactId>
         <version>2.2.0.Final</version>
-        <scope>system</scope>
-        <!-- Add the dependency locally for now as this release is not yet in Maven Central -->
-        <systemPath>${basedir}/local-libs/mvel2-2.2.0.Final.jar</systemPath>
+        <!--<scope>system</scope>-->
+        <!--&lt;!&ndash; Add the dependency locally for now as this release is not yet in Maven Central &ndash;&gt;-->
+        <!--<systemPath>${basedir}/local-libs/mvel2-2.2.0.Final.jar</systemPath>-->
       </dependency>
       <dependency>
         <groupId>junit</groupId>
