--- a/pom.xml
+++ b/pom.xml
@@ -8,88 +8,121 @@
   <artifactId>vertx-js</artifactId>
   <version>3.0.0-SNAPSHOT</version>
 
-
-    <!-- This is temporary, until the MVEL release hits Maven Central -->
-    <repositories>
-        <repository>
-            <id>Codehaus repository</id>
-            <url>http://repository.codehaus.org</url>
-        </repository>
-    </repositories>
+  <repositories>
+    <repository>
+      <!-- This is temporary, until the MVEL release hits Maven Central -->
+      <id>Codehaus repository</id>
+      <url>http://repository.codehaus.org</url>
+    </repository>
+    <repository>
+      <id>jsdoctk1</id>
+      <url>http://jsdoctk-plugin.googlecode.com/svn/repo</url>
+    </repository>
+  </repositories>
+  <pluginRepositories>
+    <pluginRepository>
+      <id>jsdoctk2</id>
+      <url>http://jsdoctk-plugin.googlecode.com/svn/repo</url>
+    </pluginRepository>
+  </pluginRepositories>
 
   <dependencies>
 
     <dependency>
-       <groupId>io.vertx</groupId>
-       <artifactId>codegen</artifactId>
-       <version>1.0-SNAPSHOT</version>
-     </dependency>
-     <dependency>
-       <groupId>io.vertx</groupId>
-       <artifactId>codegen</artifactId>
-       <version>1.0-SNAPSHOT</version>
-       <classifier>sources</classifier>
-     </dependency>
-     <dependency>
-       <groupId>io.vertx</groupId>
-       <artifactId>vertx-core</artifactId>
-       <version>3.0.0-SNAPSHOT</version>
-     </dependency>
-     <dependency>
-       <groupId>io.vertx</groupId>
-       <artifactId>vertx-core</artifactId>
-       <version>3.0.0-SNAPSHOT</version>
-       <classifier>sources</classifier>
-     </dependency>
-      <dependency>
-        <groupId>org.mvel</groupId>
-        <artifactId>mvel2</artifactId>
-        <version>2.2.0.Final</version>
-        <!--<scope>system</scope>-->
-        <!--&lt;!&ndash; Add the dependency locally for now as this release is not yet in Maven Central &ndash;&gt;-->
-        <!--<systemPath>${basedir}/local-libs/mvel2-2.2.0.Final.jar</systemPath>-->
-      </dependency>
-      <dependency>
-        <groupId>junit</groupId>
-        <artifactId>junit</artifactId>
-        <version>4.11</version>
-        <scope>test</scope>
-      </dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>codegen</artifactId>
+      <version>1.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>codegen</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-core</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
+      <classifier>sources</classifier>
+    </dependency>
+    <dependency>
+      <groupId>org.mvel</groupId>
+      <artifactId>mvel2</artifactId>
+      <version>2.2.0.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.11</version>
+      <scope>test</scope>
+    </dependency>
 
   </dependencies>
 
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                </configuration>
-            </plugin>
-            <plugin>
-                <artifactId>maven-source-plugin</artifactId>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>jar-no-fork</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
-                <configuration>
-                    <additionalClasspathElements>
-                        <additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
-                    </additionalClasspathElements>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <artifactId>maven-source-plugin</artifactId>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jar-no-fork</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.17</version>
+        <configuration>
+          <additionalClasspathElements>
+            <additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
+          </additionalClasspathElements>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>nl.windgazer</groupId>
+        <artifactId>jsdoctk-plugin</artifactId>
+        <version>2.3.2</version>
+        <configuration>
+          <directory>${project.build.directory}/jsdoc</directory>
+          <recurse>5</recurse>
+          <!--<ext>js</ext>-->
+          <!--<allfunctions>true</allfunctions>-->
+          <!--<Allfunctions>false</Allfunctions>-->
+          <privateOption>false</privateOption>
+          <!-- If you're using the maven default setup this alternative is sometimes required
+          to make the plugin work: ${basedir}/src/main/webapp/ -->
+          <srcDir>${basedir}/src/main/resources</srcDir>
+          <exclude>
+            <param>regularexpression</param><!--Multiple param entries allowed-->
+          </exclude>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>jsdoc</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 
 
 </project>
