--- a/pom.xml
+++ b/pom.xml
@@ -131,8 +131,7 @@
                 <processor>io.vertx.codegen.CodeGenProcessor</processor>
               </processors>
               <optionMap>
-                <nameTemplate>${project.basedir}/src/main/resources/vertx-js/@{helper.convertCamelCaseToUnderscores(typeSimpleName)}.js</nameTemplate>
-                <templateFileName>vertx-js/template/js.templ</templateFileName>
+                <outputDirectory>${project.basedir}/src/main</outputDirectory>
               </optionMap>
               <sourceDirectory>${project.build.directory}/vertx-core</sourceDirectory>
               <systemProperties>
