--- a/pom.xml
+++ b/pom.xml
@@ -132,11 +132,9 @@
               </processors>
               <optionMap>
                 <outputDirectory>${project.basedir}/src/main</outputDirectory>
+                <vertx.js.scriptDir>vertx-js</vertx.js.scriptDir>
               </optionMap>
               <sourceDirectory>${project.build.directory}/vertx-core</sourceDirectory>
-              <systemProperties>
-                <vertx-js.scriptDir>vertx-js</vertx-js.scriptDir>
-              </systemProperties>
             </configuration>
           </execution>
         </executions>
