Have JUL log on a single line instead of 2 during codegen

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,9 @@
             </goals>
             <phase>generate-sources</phase>
             <configuration>
+              <systemProperties>
+                <java.util.logging.SimpleFormatter.format>%4$s: %3$s - %5$s %6$s%n</java.util.logging.SimpleFormatter.format>
+              </systemProperties>
               <processors>
                 <processor>io.vertx.codegen.CodeGenProcessor</processor>
               </processors>
@@ -154,6 +157,9 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.17</version>
         <configuration>
+          <systemPropertyVariables>
+            <java.util.logging.SimpleFormatter.format>%4$s: %3$s - %5$s %6$s%n</java.util.logging.SimpleFormatter.format>
+          </systemPropertyVariables>
           <additionalClasspathElements>
             <additionalClasspathElement>${project.build.testSourceDirectory}</additionalClasspathElement>
             <additionalClasspathElement>${project.basedir}/src/main/resources</additionalClasspathElement>
