--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
         <executions>
           <!-- Unpack vertx-core source code to target/vertx-core -->
           <execution>
-            <id>unpack</id>
+            <id>unpack-vertx-core</id>
             <phase>generate-sources</phase>
             <goals>
               <goal>unpack</goal>
@@ -109,7 +109,26 @@
                   <classifier>sources</classifier>
                 </artifactItem>
               </artifactItems>
-              <outputDirectory>${project.build.directory}/vertx-core</outputDirectory>
+              <outputDirectory>${project.build.directory}/sources/vertx-core</outputDirectory>
+            </configuration>
+          </execution>
+          <!-- Unpack codegen source code to target/sources/codegen -->
+          <execution>
+            <id>unpack-codegen</id>
+            <phase>generate-test-sources</phase>
+            <goals>
+              <goal>unpack</goal>
+            </goals>
+            <configuration>
+              <artifactItems>
+                <artifactItem>
+                  <groupId>io.vertx</groupId>
+                  <artifactId>codegen</artifactId>
+                  <version>1.0-SNAPSHOT</version>
+                  <classifier>sources</classifier>
+                </artifactItem>
+              </artifactItems>
+              <outputDirectory>${project.build.directory}/sources/codegen</outputDirectory>
             </configuration>
           </execution>
         </executions>
@@ -121,7 +140,7 @@
         <executions>
           <!-- Run the annotation processor on vertx-core and generate the js API -->
           <execution>
-            <id>codegen</id>
+            <id>generate-vertx-core</id>
             <goals>
               <goal>process</goal>
             </goals>
@@ -136,10 +155,37 @@
               <optionMap>
                 <outputDirectory>${project.basedir}/src/main</outputDirectory>
               </optionMap>
-              <sourceDirectory>${project.build.directory}/vertx-core</sourceDirectory>
+              <sourceDirectory>${project.build.directory}/sources/vertx-core</sourceDirectory>
+            </configuration>
+          </execution>
+          <!-- Run the annotation processor on codegen and generate the js codegen -->
+          <execution>
+            <id>generate-codegen</id>
+            <goals>
+              <goal>process</goal>
+            </goals>
+            <phase>generate-test-sources</phase>
+            <configuration>
+              <systemProperties>
+                <java.util.logging.SimpleFormatter.format>%4$s: %3$s - %5$s %6$s%n</java.util.logging.SimpleFormatter.format>
+              </systemProperties>
+              <processors>
+                <processor>io.vertx.codegen.CodeGenProcessor</processor>
+              </processors>
+              <optionMap>
+                <outputDirectory>${project.basedir}/src/test</outputDirectory>
+              </optionMap>
+              <sourceDirectory>${project.build.directory}/sources/codegen</sourceDirectory>
             </configuration>
           </execution>
         </executions>
+        <dependencies>
+          <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <plugin>
         <artifactId>maven-source-plugin</artifactId>
