--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
   <modelVersion>4.0.0</modelVersion>
 
-  <artifactId>vertx-js</artifactId>
+  <artifactId>vertx-lang-js</artifactId>
   <version>3.0.0-SNAPSHOT</version>
 
   <repositories>
