--- a/pom.xml
+++ b/pom.xml
@@ -36,12 +36,12 @@
 
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>codegen</artifactId>
+      <artifactId>vertx-codegen</artifactId>
       <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>codegen</artifactId>
+      <artifactId>vertx-codegen</artifactId>
       <version>1.0-SNAPSHOT</version>
       <classifier>sources</classifier>
     </dependency>
@@ -159,7 +159,7 @@
               <artifactItems>
                 <artifactItem>
                   <groupId>io.vertx</groupId>
-                  <artifactId>codegen</artifactId>
+                  <artifactId>vertx-codegen</artifactId>
                   <version>1.0-SNAPSHOT</version>
                   <classifier>sources</classifier>
                 </artifactItem>
