--- a/pom.xml
+++ b/pom.xml
@@ -34,14 +34,14 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>docgen</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>vertx-docgen</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
-      <artifactId>codetrans</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <artifactId>vertx-codetrans</artifactId>
+      <version>3.0.0-SNAPSHOT</version>
       <optional>true</optional>
     </dependency>
     <dependency>
