--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <version>3.0.0-SNAPSHOT</version>
 
   <properties>
+    <vertx.version>3.0.0-SNAPSHOT</vertx.version>
     <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
   </properties>
@@ -24,35 +25,35 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-codegen</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${vertx.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-codegen</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>${vertx.version}</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-docgen</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${vertx.version}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-codetrans</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${vertx.version}</version>
       <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${vertx.version}</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
-      <version>3.0.0-SNAPSHOT</version>
+      <version>${vertx.version}</version>
       <classifier>sources</classifier>
     </dependency>
     <dependency>
@@ -128,7 +129,7 @@
                 <artifactItem>
                   <groupId>io.vertx</groupId>
                   <artifactId>vertx-core</artifactId>
-                  <version>3.0.0-SNAPSHOT</version>
+                  <version>${vertx.version}</version>
                   <classifier>sources</classifier>
                 </artifactItem>
               </artifactItems>
@@ -147,7 +148,7 @@
                 <artifactItem>
                   <groupId>io.vertx</groupId>
                   <artifactId>vertx-codegen</artifactId>
-                  <version>1.0-SNAPSHOT</version>
+                  <version>${vertx.version}</version>
                   <classifier>sources</classifier>
                 </artifactItem>
               </artifactItems>
