--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,16 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-parent</artifactId>
-    <version>3.0.0-SNAPSHOT</version>
+    <version>3.0.0-dev_preview1</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
 
   <artifactId>vertx-lang-js</artifactId>
-  <version>3.0.0-SNAPSHOT</version>
+  <version>3.0.0-dev_preview1</version>
 
   <properties>
-    <vertx.version>3.0.0-SNAPSHOT</vertx.version>
+    <vertx.version>3.0.0-dev_preview1</vertx.version>
     <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
   </properties>
