Update the build to allow doc override and packaging

--- a/pom.xml
+++ b/pom.xml
@@ -188,6 +188,29 @@
               <sourceDirectory>${project.build.directory}/sources/vertx-core</sourceDirectory>
             </configuration>
           </execution>
+
+          <!-- We have to run the annotation processor again to process doc overrides -->
+          <execution>
+            <id>docgen-docoverrides</id>
+            <goals>
+              <goal>process</goal>
+            </goals>
+            <phase>generate-sources</phase>
+            <configuration>
+              <systemProperties>
+                <java.util.logging.SimpleFormatter.format>%4$s: %3$s - %5$s %6$s%n</java.util.logging.SimpleFormatter.format>
+              </systemProperties>
+              <processors>
+                <processor>io.vertx.docgen.DocGenProcessor</processor>
+              </processors>
+              <optionMap>
+                <outputDirectory>${project.basedir}/src/main</outputDirectory>
+                <docgen.output>${asciidoc.dir}</docgen.output>
+              </optionMap>
+              <sourceDirectory>src/main/docoverride</sourceDirectory>
+            </configuration>
+          </execution>
+
           <!-- Run the annotation processor on codegen and generate the js codegen -->
           <execution>
             <id>generate-codegen</id>
@@ -253,6 +276,24 @@
               <outputDirectory>${project.build.directory}/docs</outputDirectory>
               <backend>html</backend>
               <doctype>book</doctype>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <executions>
+          <execution>
+            <id>assemble-html</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <attach>true</attach>
+              <descriptors>
+                <descriptor>src/main/assembly/html.xml</descriptor>
+              </descriptors>
             </configuration>
           </execution>
         </executions>
