--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
   <version>3.0.0-SNAPSHOT</version>
 
   <properties>
+    <stack.version>3.0.0-SNAPSHOT</stack.version>
     <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
   </properties>
@@ -24,7 +25,7 @@
       <dependency>
         <groupId>io.vertx</groupId>
         <artifactId>vertx-dependencies</artifactId>
-        <version>3.0.0-SNAPSHOT</version>
+        <version>${stack.version}</version>
         <type>pom</type>
         <scope>import</scope>
       </dependency>
