--- a/pom.xml
+++ b/pom.xml
@@ -93,6 +93,26 @@
   </dependencies>
 
   <build>
+
+    <!--<resources>-->
+      <!--<resource>-->
+        <!--<directory>src/main/resources</directory>-->
+
+        <!--<excludes>-->
+          <!--<exclude>*.js</exclude>-->
+        <!--</excludes>-->
+        <!--<filtering>false</filtering>-->
+      <!--</resource>-->
+      <!--<resource>-->
+        <!--<directory>src/test/resources</directory>-->
+
+        <!--<excludes>-->
+          <!--<exclude>*.js</exclude>-->
+        <!--</excludes>-->
+        <!--<filtering>false</filtering>-->
+      <!--</resource>-->
+    <!--</resources>-->
+
     <pluginManagement>
       <plugins>
         <plugin>
