--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-parent</artifactId>
-    <version>2</version>
+    <version>5</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -256,7 +256,7 @@
               <directoryRoots>
                 <directoryRoot>${basedir}/src/main/resources/vertx-js</directoryRoot>
               </directoryRoots>
-              <outputDirectory>${project.build.directory}/docs/js/jsdoc</outputDirectory>
+              <outputDirectory>${project.build.directory}/docs/vertx-core/js/jsdoc</outputDirectory>
             </configuration>
           </execution>
         </executions>
@@ -273,7 +273,7 @@
             <phase>package</phase>
             <configuration>
               <sourceDirectory>${asciidoc.dir}</sourceDirectory>
-              <outputDirectory>${project.build.directory}/docs</outputDirectory>
+              <outputDirectory>${project.build.directory}/docs/vertx-core</outputDirectory>
               <backend>html</backend>
               <doctype>book</doctype>
               <preserveDirectories>true</preserveDirectories>
