--- a/pom.xml
+++ b/pom.xml
@@ -86,9 +86,13 @@
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-codegen</artifactId>
-      <!-- Remove that -> dependencies -->
-      <version>${stack.version}</version>
       <classifier>tck</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-codegen</artifactId>
+      <classifier>tck-sources</classifier>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -164,7 +168,7 @@
               <includeGroupIds>io.vertx</includeGroupIds>
               <includeArtifactIds>vertx-codegen</includeArtifactIds>
               <includeTypes>jar</includeTypes>
-              <includeClassifiers>sources</includeClassifiers>
+              <includeClassifiers>tck-sources</includeClassifiers>
               <outputDirectory>${project.build.directory}/sources/codegen</outputDirectory>
             </configuration>
           </execution>
