--- a/pom.xml
+++ b/pom.xml
@@ -311,6 +311,11 @@
               <doctype>book</doctype>
               <preserveDirectories>true</preserveDirectories>
               <relativeBaseDir>true</relativeBaseDir>
+              <attributes>
+                <maven-groupId>${project.groupId}</maven-groupId>
+                <maven-artifactId>${project.artifactId}</maven-artifactId>
+                <maven-version>${project.version}</maven-version>
+              </attributes>
             </configuration>
           </execution>
         </executions>
