--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,5 @@ test-tmp
 *.class
 src/gen
 src/main/resources/vertx-js/*.js
-src/test/resources/testmodel-js/*.js
+# src/test/resources/testmodel-js/*.js
 src/scratchpad
