--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>io.vertx</groupId>
     <artifactId>vertx-parent</artifactId>
-    <version>9</version>
+    <version>10</version>
   </parent>
 
   <modelVersion>4.0.0</modelVersion>
@@ -188,6 +188,7 @@
               </processors>
               <optionMap>
                 <outputDirectory>${project.basedir}/src/main</outputDirectory>
+                <codeGenerators>JavaScript</codeGenerators>
               </optionMap>
               <sourceDirectory>${project.build.directory}/sources/vertx-core</sourceDirectory>
             </configuration>
@@ -230,7 +231,6 @@
               </processors>
               <optionMap>
                 <docgen.output>${asciidoc.dir}/js</docgen.output>
-
                 <maven.groupId>${project.groupId}</maven.groupId>
                 <maven.artifactId>${project.artifactId}</maven.artifactId>
                 <maven.version>${project.version}</maven.version>
@@ -255,6 +255,7 @@
               </processors>
               <optionMap>
                 <outputDirectory>${project.basedir}/src/test</outputDirectory>
+                <codeGenerators>JavaScript</codeGenerators>
               </optionMap>
               <sourceDirectory>${project.build.directory}/sources/codegen</sourceDirectory>
             </configuration>
