--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -14,8 +14,8 @@
   <version>3.6.0-SNAPSHOT</version>
 
   <properties>
-    <asciidoc.dir>${project.basedir}/src/main/asciidoc</asciidoc.dir>
     <tools.jar>${java.home}/../lib/tools.jar</tools.jar>
+    <asciidoc.path>/js</asciidoc.path>
   </properties>
 
   <dependencies>
