Move vertx-rx-js in this project

--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
   <modules>
     <module>vertx-lang-js-codegen</module>
     <module>vertx-lang-js</module>
+    <module>vertx-rx-js</module>
   </modules>
 
   <dependencies>
