Added Vert.x Web GraphQL

--- a/vertx-lang-js/pom.xml
+++ b/vertx-lang-js/pom.xml
@@ -175,6 +175,11 @@
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
+      <artifactId>vertx-web-graphql</artifactId>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
       <artifactId>vertx-circuit-breaker</artifactId>
       <optional>true</optional>
     </dependency>
@@ -413,6 +418,7 @@
             vertx-web-templ-pebble,
             vertx-web-templ-rocker,
             vertx-web-templ-thymeleaf,
+            vertx-web-graphql,
             vertx-circuit-breaker,
             vertx-dropwizard-metrics,
             vertx-redis-client,
