Update for codegen change: https://github.com/vert-x3/vertx-codegen/pull/290

--- a/vertx-lang-js-gen/pom.xml
+++ b/vertx-lang-js-gen/pom.xml
@@ -126,7 +126,7 @@
           <execution>
             <id>generate-codegen</id>
             <goals>
-              <goal>process</goal>
+              <goal>process-test</goal>
             </goals>
             <phase>generate-test-sources</phase>
             <configuration>
